Terminado con pruebas

--- a/notas.html
+++ b/notas.html
@@ -13,7 +13,9 @@
 
 <body>
     <div class="d-flex justify-content-center">
-        <a href="/index.html"><button class="btn btn-dark" id="">Pagina 1 </button></a>
+        <a href="/index.html"
+            class="btn btn-dark">Pagina 1
+        </a>
     </div>
 
     <div class="bg-warning p-4">
@@ -34,10 +36,12 @@
     </div>
 
     <div>
-        <div class="input-group input-group-sm mb-3">
-            <label for="Buscar" class="form-label">Buscar</label>
-            <input type="text" class="form-control" aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-sm" id="Buscar">
+        <div class="input-group input-group-sm mb-3" id="inputGroup-sizing-sm">
+            <label for="buscar" class="form-label">Buscar</label>
+            <input type="text" class="form-control" 
+            aria-label="Sizing example input"
+            aria-describedby="inputGroup-sizing-sm" 
+                id="buscar">
         </div>
         <div>
             <div class="form-check form-switch">
